--- a/styles.css
+++ b/styles.css
@@ -7,15 +7,21 @@ body {
     display:flex;
     padding:10px;
     margin:10px;
-    background:lightgray;
+    background:#F1F3FFFF;
 }
 
 .assignment img {
     width:200px;
-    padding:10px;
+    border: 2px solid #F99Fc9FF;
+    margin-right: 20px;
 }
 
 h1 {
     color: white;
     text-align:center;
+}
+
+a{
+    text-decoration:none;
+    color:#Ef6079FF;
 }
