--- a/styles.css
+++ b/styles.css
@@ -7,13 +7,17 @@ body {
     display:flex;
     padding:10px;
     margin:10px;
+    margin-bottom: 30px;
     background:#F1F3FFFF;
+    border-radius:5px;
+    box-shadow: 5px 10px white;
 }
 
 .assignment img {
     width:200px;
     border: 2px solid #F99Fc9FF;
     margin-right: 20px;
+    border-radius:5px;
 }
 
 h1 {
@@ -24,4 +28,8 @@ h1 {
 a{
     text-decoration:none;
     color:#Ef6079FF;
+}
+
+.assignment a:hover {
+    color:magenta;
 }
